# leadflow-ai

./: .env.example  .gitignore  Dockerfile.web  Dockerfile.worker  README.md  alembic.ini  docker-compose.yml  pyproject.toml  ui_preview.html
alembic/: env.py
alembic/versions/: 20260418_0001_init.py
leadflow/: config.py  repositories.py  schemas.py  web.py  worker.py
leadflow/api/: app.py
leadflow/db/: migrate.py  models.py  session.py
leadflow/integrations/: apify_client.py  openai_client.py  voicecall_client.py
leadflow/services/: normalize.py  workflow.py
leadflow/static/: app.css  app.js
leadflow/templates/: index.html
scripts/: test_apify_profile_actor.py
tests/: conftest.py
tests/integration/: test_app_flow.py
tests/unit/: test_normalize.py  test_repositories.py  test_voicecall_payload.py
