[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leadflow-ai"
version = "0.1.0"
description = "Lead prospecting workspace with AI scoring, Apify enrichment, and voicecall handoff."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0,<2.0.0",
  "flask>=3.0.0,<4.0.0",
  "httpx>=0.28.0,<1.0.0",
  "jinja2>=3.1.0,<4.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "pydantic-settings>=2.7.0,<3.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.25.0,<1.0.0",
]

[tool.setuptools.packages.find]
include = ["leadflow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
